	- Merge PR #671 from Petr Menšík: Disable ED25519 and ED448 in FIPS
	  mode on openssl3.
	- Merge PR #660 from Petr Menšík: Sha1 runtime insecure.
	- For #660: formatting, less verbose logging, add EDE information.
	- Fix for correct openssl error when adding windows CA certificates to
	  the openssl trust store.
	- Improve val_sigcrypt.c::algo_needs_missing for one loop pass.

1 July 2022: George
	- Merge PR #706: NXNS fallback.
	- From #706: Cached NXDOMAIN does not increase the target nx
	  responses.
	- From #706: Don't generate parent side queries if we already
	  have the lame records in cache.
	- From #706: When a lame address is the best choice, don't try to
	  generate target queries when the missing targets are all lame.

29 June 2022: Wouter
	- iana portlist update.
	- Fix detection of libz on windows compile with static option.
	- Fix compile warning for windows compile.

29 June 2022: George
	- Add debug option to the mini_tdir.sh test code.
	- Fix #704: [FR] Statistics counter for number of outgoing UDP queries
	  sent; introduces 'num.query.udpout' to the 'unbound-control stats'
	  command.
	- Fix to not count cached NXDOMAIN for MAX_TARGET_NX.
	- Allow fallback to the parent side when MAX_TARGET_NX is reached.
	  This will also allow MAX_TARGET_NX more NXDOMAINs.

28 June 2022: George
	- Show the output of the exact .rpl run that failed with 'make test'.
	- Fix for cached 0 TTL records to not trigger prefetching when
	  serve-expired-client-timeout is set.

28 June 2022: Wouter
	- Fix test program dohclient close to use portability routine.

23 June 2022: Tom
	- Clarify -v flag manpage entry (#705)

22 June 2022: Philip
	- Fix #663: use after free issue with edns options.

21 June 2022: Philip
	- Fix for loading locally stored zones that have lines with blanks or
	  blanks and comments.

20 June 2022: George
	- Remove unused LDNS function check for GOST Engine unloading.

14 June 2022: George
	- Merge PR #688: Rpz url notify issue.